...
         return label
         }()
    
        let safeActionButton: UIButton = {
        let button = UIButton(type: .system)
        let attributedTitle = NSMutableAttributedString(string: "", attributes: [NSAttributedString.Key.font: UIFont.systemFont(ofSize: 16), NSAttributedString.Key.foregroundColor: UIColor.lightGray])
        attributedTitle.append(NSAttributedString(string: "Safe Actions",attributes: [NSAttributedString.Key.font: UIFont.boldSystemFont(ofSize: 16), NSAttributedString.Key.foregroundColor: UIColor.mainBlueTint]))
        button.setAttributedTitle(attributedTitle, for: .normal)
        button.addTarget(self, action: #selector(goSafeActions), for: .touchUpInside)
        return button
         }()
    
//Notification Button............
...
             button.titleLabel?.font = UIFont.systemFont(ofSize: 16)
        //     button.addTarget(self, action: #selector(handleSignIn), for: .touchUpInside)
             return button
     }()
    private let updateButton: UIButton = {
              let button = UIButton(type: .system)
              button.setTitle("Update", for: .normal)
              button.titleLabel?.font = UIFont.systemFont(ofSize: 16)
              button.addTarget(self, action: #selector(goUpdate), for: .touchUpInside)
              return button
      }()
    private let settingsButton: UIButton = {
              let button = UIButton(type: .system)
              button.setTitle("Setting", for: .normal)
              button.titleLabel?.font = UIFont.systemFont(ofSize: 16)
              button.addTarget(self, action: #selector(handleSettings), for: .touchUpInside)
              return button
      }()
// See more MAP .............................
    private let SeeMoreLabel1: UILabel = {
...
