...
        return textView
    }()


       private let previousButton: UIButton = {
           let button = UIButton(type: .system)
           button.setTitle("PREV", for: .normal)
           button.translatesAutoresizingMaskIntoConstraints = false
           button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 14)
        button.setTitleColor(.SafemainPink, for: .normal)
        button.addTarget(self, action: #selector(Back), for: .touchUpInside)
           return button
       }()
       
       private let nextButton: UIButton = {
           let button = UIButton(type: .system)
           button.setTitle("NEXT", for: .normal)
           button.setTitleColor(.gray, for: .normal)
           button.translatesAutoresizingMaskIntoConstraints = false
           button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 14)
           
           return button
       }()
...
