...
       }
    
    
    //MARK: - Properties
   private let closeButton: UIButton = {
       let button = UIButton(type: .system)
       button.setTitle("Back", for: .normal)
       button.translatesAutoresizingMaskIntoConstraints = false
       button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 16)
       button.setTitleColor(.gray, for: .normal)
       button.addTarget(self, action: #selector(Back), for: .touchUpInside)
    
       return button
...
